feat(entrypoint): call start-server.py to start the server