@@ -9,7 +9,8 @@ shift
 function shutdown()
 {
     stop-server
-    wait "$javaPid"
+    sleep 10s
+    echo "Server shutdown!"
 }
 
 export PATH=$PATH:/usr/local/bin/mcserver
@@ -19,15 +20,10 @@ python3 download-minecraft.py $pythonArg
 echo "Install result: $?"
 
 cd /mcserver
-javaExtraArgs="--add-modules=jdk.incubator.vector -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20"
-exec java -Xms1G -Xmx1G $javaExtraArgs -jar server.jar --nogui &
-javaPid=`pgrep -f java | xargs`
+python3 start-server.py
+javaPid=$(cat /mcserver/server.pid)
 
-sleep 30s
-
-echo "[hit enter key to exit] or run 'docker stop <container>'"
+tail -n 1 -f /mcserver/logs/latest.log &
 read
 
 shutdown
-
-echo "Server shutdown!"
